# kindara

./: .clippy.toml  .dockerignore  .env.example  .gitignore  .gitmodules  .rusty-hook.toml  Dockerfile  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  blight.lua  docker-compose.yml  fly.toml
server/: Cargo.toml
server/assets/: damage-types.ron  resistances.ron
server/assets/enemies/: racoon.prototype.ron
server/assets/items/testing/: flower.prototype.ron  vase.prototype.ron
server/assets/masteries/: freelancer.ron  virtuoso.ron
server/assets/masteries/virtuoso/: virtuoso.mastery.ron
server/assets/prototypes/hostiles/: racoon.prototype.ron
server/assets/skills/: blade-flourish.ron  fireball.ron  punch.ron
server/assets/world/: abyss.prototype.ron  void.prototype.ron
server/assets/world/testing/: movement.prototype.ron
server/assets/world/trinus/: the-roaring-lion.prototype.ron  trinus-castra.prototype.ron
server/migrations/: 20230521000554_add-characters.sql  20230525234602_add-character-config.sql  20230613214635_add-world-state.sql  20230614211725_add-description-to-characters.sql  20230617193451_change-role-to-enum.sql  20230826162855_add_mastery_to_character.sql
server/src/: keycard.rs  main.rs  utils.rs  values.rs
server/src/auth/: components.rs  mod.rs  plugin.rs  systems.rs
server/src/combat/: bundles.rs  components.rs  events.rs  mod.rs  plugin.rs  rolls.rs  systems.rs
server/src/combat/commands/: advance.rs  attack.rs  block.rs  dodge.rs  mod.rs  retreat.rs  (+1 more)
server/src/data/: plugin.rs  resources.rs  systems.rs
server/src/db/: mod.rs  models.rs  pool.rs  utils.rs
server/src/input/: events.rs  mod.rs  plugin.rs  systems.rs
server/src/interact/: components.rs  mod.rs  plugin.rs  systems.rs
server/src/items/: bundles.rs  components.rs  mod.rs  plugin.rs  utils.rs
server/src/lua/: context.rs  data.rs  events.rs  mod.rs  plugin.rs  resources.rs  systems.rs
server/src/mastery/: load.rs  mod.rs  plugin.rs  resources.rs
server/src/menu/: plugin.rs
server/src/net/: mod.rs  plugin.rs  systems.rs  telnet.rs  utils.rs
server/src/npc/: bundles.rs  components.rs  mod.rs  plugin.rs  systems.rs
server/src/player/: bundles.rs  components.rs  config.rs  events.rs  mod.rs  permissions.rs  plugin.rs  resources.rs  systems.rs
server/src/skills/: components.rs  load.rs  mod.rs  plugin.rs  resources.rs  systems.rs
server/src/social/: commands.rs  mod.rs  plugin.rs
server/src/spatial/: bundles.rs  commands.rs  components.rs  events.rs  mod.rs  plugin.rs  systems.rs  utils.rs
server/src/test/: app_builder.rs  item_builder.rs  mod.rs  npc_builder.rs  player_builder.rs  tile_builder.rs  transition_builder.rs  utils.rs
server/src/visual/: components.rs  mod.rs  paint.rs  plugin.rs  utils.rs
server/src/world/: mod.rs  plugin.rs  resources.rs  systems.rs
(+44 files in other folders)
