[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
Inflector = "0.11"
ascii_table = "4.0"
async-std = { version = "1.12", features = ["attributes"] }
bcrypt = "0.14"
bevy = { version = "0.10", default-features = false }
bevy-nest = "0.1"
bevy_proto = { version = "0.10", default-features = false, features = ["ron"] }
censor = "0.3"
chrono = "0.4"
dotenvy = "0.15"
futures-lite = "1.13"
indefinite = "0.1"
rand = "0.8"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.0-alpha.3", features = [
  "chrono",
  "json",
  "postgres",
  "runtime-async-std",
  "tls-rustls",
] }
vari = "0.2"

[dev-dependencies]
fake = { version = "2.6", features = ["derive"] }
rusty-hook = "0.11"
