[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
Inflector = "0.11"
ascii_table = "4.0"
async-std = { version = "1.12", features = ["attributes"] }
bcrypt = "0.15"
bevy = { version = "0.11", default-features = false }
bevy-nest = "0.2"
bevy_proto = { version = "0.11", default-features = false, features = [
  "auto_name",
  "ron",
] }
caith = "4.2"
censor = "0.3"
chrono = "0.4"
colored = "1.9"
dotenvy = "0.15"
enum-as-inner = "0.6"
futures-lite = "1.13"
indefinite = "0.1"
rand = "0.8"
regex = "1.8"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
  "chrono",
  "json",
  "postgres",
  "runtime-async-std",
  "tls-rustls",
] }
thiserror = "1.0.50"

[dev-dependencies]
fake = { version = "2.6", features = ["derive"] }
rstest = "0.18.2"
rusty-hook = "0.11"
